force-app/main/default/objects/CLQ_Inspection_Tools__c/CLQ_Inspection_Tools__c.object-meta.xml
<CustomObject>
    <label>Inspection Tools</label>
    <nameField>
        <label>Inspection Tools Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Tools</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>