force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/Applicable_to_SUTQ_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Applicable_to_SUTQ_Transactions__c</fullName>
    <label>Applicable to (SUTQ Transactions)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Registration</fullName>
            </value>
            <value>
                <fullName>Ongoing Registration</fullName>
            </value>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Expedited Registration</fullName>
            </value>
            <value>
                <fullName>Change of Owner Registration</fullName>
            </value>
            <value>
                <fullName>Reinstate Rating after Temporary Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>