force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Active__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>