force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Applicable_To_Scope__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Applicable_To_Scope__c</fullName>
    <label>Applicable To (Scope)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Focused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>