force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Application_To_Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Application_To_Inspection_Type__c</fullName>
    <label>Application To(Inspection Type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-license</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Incident / Injury / Illness</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Amendment - change of location</fullName>
            </value>
            <value>
                <fullName>Amendment - change of capacity</fullName>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>