force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>