force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Is_Related_to_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_Related_to_Program_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related to Program Transaction</label>
    <type>Checkbox</type>
</CustomField>