force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/CLQ_Onsite__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Onsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite</label>
    <type>Checkbox</type>
</CustomField>