force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/ProgramTransacationEstimatedRating__c.field-meta.xml
<CustomField>
    <fullName>ProgramTransacationEstimatedRating__c</fullName>
    <description>Field value to filter the Rules based on the estimated ratings on the Program Transaction</description>
    <label>ProgramTransacationEstimatedRating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not 4 or 5 Rating</fullName>
            </value>
            <value>
                <fullName>4 or 5 Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>