force-app/main/default/objects/CLQ_Inspection_Tools__c/fields/PTEstimatedDeskRating_c__c.field-meta.xml
<CustomField>
    <fullName>PTEstimatedDeskRating_c__c</fullName>
    <label>PTEstimatedDeskRating__c</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>