force-app/main/default/objects/CLQ_Inspection_Tools__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Applicable_To__c</columns>
    <columns>Applicable_to_SUTQ_Transactions__c</columns>
    <columns>CLQ_Onsite__c</columns>
    <columns>CLQ_Description__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CLQ_Application_To_Inspection_Type__c</columns>
    <columns>CLQ_Is_Related_to_Program_Transaction__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>