force-app/main/default/objects/CLQ_Inspection_Tools__c/listViews/All_Informatica.listView-meta.xml
<ListView>
    <fullName>All_Informatica</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Applicable_To__c</columns>
    <columns>CLQ_Application_To_Inspection_Type__c</columns>
    <columns>CLQ_Applicable_To_Scope__c</columns>
    <columns>CLQ_Description__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Informatica User</value>
    </filters>
    <label>All_Informatica</label>
</ListView>