force-app/main/default/objects/CLQ_Inspection_Tools__c/listViews/Pre_License_Inspection_Tool.listView-meta.xml
<ListView>
    <fullName>Pre_License_Inspection_Tool</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CLQ_Application_To_Inspection_Type__c</field>
        <operation>equals</operation>
        <value>Pre-license</value>
    </filters>
    <label>Pre License Inspection Tool</label>
    <language>en_US</language>
</ListView>